[FIX] Show trash only when dropdown unwrapped

--- a/source/app/static/assets/css/alerts.css
+++ b/source/app/static/assets/css/alerts.css
@@ -165,3 +165,7 @@
     top: 50%;
     transform: translateY(-50%);
 }
+
+.hidden-trash {
+    display: none;
+}
